# Chip8

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
includes/: chip8.h  display.h  gui.h
src/: chip8.c  display.c  gui.c
